# SQLLint

./: .flake8  README.md  makefile  pyproject.toml
src/demo/: test.sql
